--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "dotenv": "^16.4.7",
     "lucide-react": "^0.475.0",
     "nanoid": "^5.1.0",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-datepicker": "^8.1.0",
